# FaceRecogniser

./: CMakeLists.txt  README.md  build.sh  build1.sh
boostbin/: boost_filesystem-vc140-mt-1_62.lib  boost_filesystem-vc140-mt-gd-1_62.lib
googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
googletest/googletest/gtest.dir/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
googletest/googletest/gtest_main.dir/Debug/gtest_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest_main.lastbuildstate
library_source/: Coords.h  FaceDetector.cpp  FaceDetector.h
source/: FaceDetector.cpp  FaceDetector.h  FaceRecogniser.cpp  FaceRecogniser.h  main.cpp
tests/: test.cpp
